# sprk

./: .clang-format  .gitignore  .gitmodules  README.md  deploy.bat  deploy.sh  ds.py  input_socket.py  test.py  toolchain-rpi.cmake
asyncstepper/: AsyncStepper.hpp  CustomSerial.hpp  asyncstepper.ino
pi/: drivetrain.py  socket_main.py  test.py
robot/: Arduino.py  Arm.py  CMakeLists.txt  Camera.py  Constants.py  Main.py  MecanumDrive.py  Pinchers.py  Robot.py  RobotCamera.py  SPRK.cpp  SPRK.hpp  Shark.py  Telemetry.py  _DEPLOYTIME.txt  main.cpp  time.txt
robot.old/: Constants.py  Pinchers.py  SPRK.py  _DEPLOYTIME.txt
robot.old/autonomous/: CoolDrive.py  Demo.py  DrivetrainTest.py  StepperTest.py
robot.old/robotBase/: Subsystem.py
robot/autonomous/: AutonomousThread.py  CoolDrive.py  Demo.py  DrivetrainTest.py  Simple.py  StepperTest.py  __init__.py
robot/base/: RobotBase.cpp  RobotEnums.hpp  SocketManager.cpp  SocketManager.hpp  Telemetry.cpp  Telemetry.hpp
robot/robotBase/: AutonomousThread.py  IOMap.py  RobotBase.py  RobotEnums.py  RobotState.py  SerialBase.py  Subsystem.py  Telemetry.py  VirtualStepper.py
robot/robotBase/actuation/: GPIOServo.py  HBridgeMotor.py  VirtualStepper.py
robot/robotBase/simulation/: GPIOSim.py  SerialSim.py  SimState.py
robot/simulation/: GPIOSim.py  SimState.py
robot/subsystem/: Drivetrain.hpp
serial/: arduino_em.py  rpi.py  serial_emulator.py  serial_test.py
src/: Constants.hpp  SPRK.cpp  SPRK.hpp  main.cpp
src/base/: Joystick.hpp  JoystickConstants.hpp  RobotBase.cpp  RobotBase.hpp  RobotEnums.hpp  Subsystem.hpp  (+9 more)
(+19 files in other folders)
